--- a/content/Week5.html
+++ b/content/Week5.html
@@ -153,6 +153,9 @@ img.add_border {
 <p><span style="background-color: #ffff00;"></span></p>
 <p><span style="background-color: #ffff00;">參考文獻</span></p>
 <p><span style="background-color: #ffff00;"></span><a href="./../downloads/123.pdf">參考的網站與資料</a></p>
+<p><a href="./../downloads/變速箱結構.pdf">參考資料</a>1</p>
+<p><a href="./../downloads/演化中的變速箱 .pdf">參考資料</a>2</p>
+<p></p>
 <br />Week5~9 << <a href='Week5~9.html'>Previous</a> <a href='Week6.html'>Next</a> >> Week6</div>
         
     <!-- footer -->
