--- a/content/Week6.html
+++ b/content/Week6.html
@@ -134,6 +134,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Week5 << <a href='Week5.html'>Previous</a> <a href='Week7.html'>Next</a> >> Week7<br /><h1>Week6</h1>
+<p><span style="background-color: #ffff00;">繪製零件與組合圖</span></p>
+<p><img alt="" height="407" src="./../images/螢幕擷取畫面 (2).png" width="476"/></p>
+<p></p>
+<p><span style="background-color: #ccffff;"></span></p>
 <br />Week5 << <a href='Week5.html'>Previous</a> <a href='Week7.html'>Next</a> >> Week7</div>
         
     <!-- footer -->
