--- a/config/content.htm
+++ b/config/content.htm
@@ -151,8 +151,13 @@
 <p><span style="background-color: #ffff00;">繪製零件與組合圖</span></p>
 <p><img alt="" height="407" src="/images/螢幕擷取畫面 (2).png" width="476"/></p>
 <p></p>
+<p><span style="background-color: #ffffff;"></span></p>
+<p><span style="background-color: #ffff00;">Solvespace</span></p>
 <p><span style="background-color: #ccffff;"></span></p>
 <h3><span style="background-color: #ccffff;">Week7</span></h3>
+<p><span style="background-color: #ffffff;"></span></p>
+<p><span style="background-color: #ffff00;">作動影片</span></p>
+<p><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/cwbKUhxM2AQ" width="560"></iframe></span></p>
 <h3><span style="background-color: #ccffff;">Week8</span></h3>
 <h3><span style="background-color: #ccffff;">Week9</span></h3>
 <h2><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week10~18</span></span></h2>
@@ -173,5 +178,12 @@
 <p><span style="background-color: #ccffff;">Week5</span></p>
 <p><span style="background-color: #ffffff;">這週開始了第二次的分組專案，我這次就不是跟第一次分組的組員了，經過了討論許久後，我們雙方都不延續之前的主題，一個因為沒什麼發展空間，一個因為要延續的話太難，所以決定做變速箱，國內沒什麼資料或設計參考圖，所以我們也找了很多國外的資料。</span></p>
 <p><span style="background-color: #ccffff;">Week6</span></p>
+<p><span style="background-color: #ffffff;">這週我開始畫幾個構想的機構圖，然後參照國外網站找到的變速箱原型下去繪製零件與組合，在模數與齒比和零件尺寸的設計上花了很多時間，在網站的協同上也因為比第一次分組時多了兩個人，所以也面臨了許多新的協同問題，還好組員們很給力也一一的解決問題了。</span></p>
 <p><span style="background-color: #ccffff;">Week7</span></p>
+<p><span style="background-color: #ffffff;">這週成功讓機構在coppeliasim作動了，一開始丟進去發現拆解後有上百個零組件時我們就先抑制掉大部分零件後先是試著讓其作動，但也發生了問題，我們也只能嘗試著各種排列組合去排列從屬關係，最後有成工作動了，但某些零件做動不太合理。</span></p>
 <p><span style="background-color: #ccffff;">Week8</span></p>
+<p></p>
+<p><span style="background-color: #ccffff;">Week9</span></p>
+<p></p>
+<p><span style="background-color: #ccffff;">Week10</span></p>
+<p></p>
