--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -92,12 +92,11 @@
 <p></p>
 <p><span style="background-color: #ffff00;">update cmsimde</span></p>
 <p><span style="background-color: #ffff00;"></span></p>
-<p><span style="background-color: #ffff00;"><img alt="" height="91" src="/images/4.png" width="171"/></span></p>
+<p><img alt="" height="91" src="/images/4.png" width="171"/></p>
 <p>1.<span>init.py : </span>其中的 site_title, ip 與 port 可以讓使用者自行修改, site_title 是網站標題, ip 為動態網站啟動時所使用的網路位址, 可設為內部或外部 IPv4 (IPv6), port 則是動態網站啟動時所佔用的埠號</p>
 <p>2.<span>http-server.py : </span>執行後會使用內建的 localhost 與 port 8444 伺服 content 子目錄中的 CMSiMDE 靜態網頁</p>
 <p>3.<span>cms.bat</span><span> :</span> 讓使用者執行動態網站用的批次檔案</p>
 <p>4.<span>acp.bat</span><span> :</span> 如果已經將倉儲設為 ssh 連線, 且提供遠端與近端的認證模式, 就可以使用<strong>acp "字串"</strong>代替執行 git add ., git commit -m "提交訊息", 以及 git push 三個指令。</p>
-<p></p>
 <p></p>
 <p><span style="background-color: #ff0000;"><strong>遇到的問題</strong></span> : </p>
 <p>1.推送後遠端沒有推送成功，且gmail顯示Page build failure(已解決，cmsimde錯誤，在cmsimde目錄下輸入git checkout 自己的分支即可。)</p>
@@ -149,7 +148,9 @@
 <p><a href="/downloads/演化中的變速箱 .pdf">參考資料</a>2</p>
 <p></p>
 <h3><span style="background-color: #ccffff;">Week6</span></h3>
-<p><span style="background-color: #ccffff;"></span></p>
+<p><span style="background-color: #ffff00;">繪製零件與組合圖</span></p>
+<p><img alt="" height="407" src="/images/螢幕擷取畫面 (2).png" width="476"/></p>
+<p></p>
 <p><span style="background-color: #ccffff;"></span></p>
 <h3><span style="background-color: #ccffff;">Week7</span></h3>
 <h3><span style="background-color: #ccffff;">Week8</span></h3>
