--- a/content/Week6.html
+++ b/content/Week6.html
@@ -137,6 +137,8 @@ img.add_border {
 <p><span style="background-color: #ffff00;">繪製零件與組合圖</span></p>
 <p><img alt="" height="407" src="./../images/螢幕擷取畫面 (2).png" width="476"/></p>
 <p></p>
+<p><span style="background-color: #ffffff;"></span></p>
+<p><span style="background-color: #ffff00;">Solvespace</span></p>
 <p><span style="background-color: #ccffff;"></span></p>
 <br />Week5 << <a href='Week5.html'>Previous</a> <a href='Week7.html'>Next</a> >> Week7</div>
         
