--- a/content/Week7.html
+++ b/content/Week7.html
@@ -134,6 +134,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Week6 << <a href='Week6.html'>Previous</a> <a href='Week8.html'>Next</a> >> Week8<br /><h1>Week7</h1>
+<p><span style="background-color: #ffffff;"></span></p>
+<p><span style="background-color: #ffff00;">作動影片</span></p>
+<p><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/cwbKUhxM2AQ" width="560"></iframe></span></p>
 <br />Week6 << <a href='Week6.html'>Previous</a> <a href='Week8.html'>Next</a> >> Week8</div>
         
     <!-- footer -->
