--- a/config/content.htm
+++ b/config/content.htm
@@ -157,9 +157,20 @@
 <h3><span style="background-color: #ccffff;">Week7</span></h3>
 <p><span style="background-color: #ffffff;"></span></p>
 <p><span style="background-color: #ffff00;">作動影片</span></p>
+<p><span style="background-color: #ffffff;">設定好軸的轉速後，調整好從屬關係及碰撞關係後就能模擬出空檔的作動了。</span></p>
 <p><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/cwbKUhxM2AQ" width="560"></iframe></span></p>
+<p><span style="background-color: #ccffff;"> </span></p>
 <h3><span style="background-color: #ccffff;">Week8</span></h3>
+<p><span style="background-color: #ffff00;">製作路徑</span></p>
+<p><span style="background-color: #ffffff;">給予打檔桿路徑及dummy後，將關節設定成IK模式，並新增IK group和IK element。</span></p>
+<p><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/kW8VxZJ2gpE" width="560"></iframe></span></p>
+<p><span style="background-color: #ccffff;"></span></p>
+<p><span style="background-color: #ccffff;"></span></p>
 <h3><span style="background-color: #ccffff;">Week9</span></h3>
+<p><span style="background-color: #ffff00;">報告週</span></p>
+<p><span style="background-color: #ffffff;">Youtube : </span></p>
+<p><span style="background-color: #ffffff;">PDF : </span></p>
+<p><span style="background-color: #ffff00;"></span></p>
 <h2><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week10~18</span></span></h2>
 <h1><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Experience</span></span></h1>
 <p><span style="background-color: #ccffff;">Week1</span></p>
@@ -182,7 +193,7 @@
 <p><span style="background-color: #ccffff;">Week7</span></p>
 <p><span style="background-color: #ffffff;">這週成功讓機構在coppeliasim作動了，一開始丟進去發現拆解後有上百個零組件時我們就先抑制掉大部分零件後先是試著讓其作動，但也發生了問題，我們也只能嘗試著各種排列組合去排列從屬關係，最後有成工作動了，但某些零件做動不太合理。</span></p>
 <p><span style="background-color: #ccffff;">Week8</span></p>
-<p></p>
+<p><span>這週我們開始嘗試讓排檔桿做動，但是在設置dummy跟設置IE關節時遇到了很多問題，但時間的關係所以只能省略很多零件以及加緊腳步了，開始製作簡報與PDF，畢竟下禮拜要報告了。</span></p>
 <p><span style="background-color: #ccffff;">Week9</span></p>
 <p></p>
 <p><span style="background-color: #ccffff;">Week10</span></p>
