--- a/content/Experience.html
+++ b/content/Experience.html
@@ -154,7 +154,7 @@ img.add_border {
 <p><span style="background-color: #ccffff;">Week7</span></p>
 <p><span style="background-color: #ffffff;">這週成功讓機構在coppeliasim作動了，一開始丟進去發現拆解後有上百個零組件時我們就先抑制掉大部分零件後先是試著讓其作動，但也發生了問題，我們也只能嘗試著各種排列組合去排列從屬關係，最後有成工作動了，但某些零件做動不太合理。</span></p>
 <p><span style="background-color: #ccffff;">Week8</span></p>
-<p></p>
+<p><span>這週我們開始嘗試讓排檔桿做動，但是在設置dummy跟設置IE關節時遇到了很多問題，但時間的關係所以只能省略很多零件以及加緊腳步了，開始製作簡報與PDF，畢竟下禮拜要報告了。</span></p>
 <p><span style="background-color: #ccffff;">Week9</span></p>
 <p></p>
 <p><span style="background-color: #ccffff;">Week10</span></p>
