--- a/content/Week8.html
+++ b/content/Week8.html
@@ -134,6 +134,11 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Week7 << <a href='Week7.html'>Previous</a> <a href='Week9.html'>Next</a> >> Week9<br /><h1>Week8</h1>
+<p><span style="background-color: #ffff00;">製作路徑</span></p>
+<p><span style="background-color: #ffffff;">給予打檔桿路徑及dummy後，將關節設定成IK模式，並新增IK group和IK element。</span></p>
+<p><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/kW8VxZJ2gpE" width="560"></iframe></span></p>
+<p><span style="background-color: #ccffff;"></span></p>
+<p><span style="background-color: #ccffff;"></span></p>
 <br />Week7 << <a href='Week7.html'>Previous</a> <a href='Week9.html'>Next</a> >> Week9</div>
         
     <!-- footer -->
