--- a/content/Week9.html
+++ b/content/Week9.html
@@ -134,6 +134,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Week8 << <a href='Week8.html'>Previous</a> <a href='Week10~18.html'>Next</a> >> Week10~18<br /><h1>Week9</h1>
+<p><span style="background-color: #ffff00;">報告週</span></p>
+<p><span style="background-color: #ffffff;">Youtube : </span></p>
+<p><span style="background-color: #ffffff;">PDF : </span></p>
+<p><span style="background-color: #ffff00;"></span></p>
 <br />Week8 << <a href='Week8.html'>Previous</a> <a href='Week10~18.html'>Next</a> >> Week10~18</div>
         
     <!-- footer -->
