--- a/content/Experience.html
+++ b/content/Experience.html
@@ -156,7 +156,7 @@ img.add_border {
 <p><span style="background-color: #ccffff;">Week8</span></p>
 <p><span>這週我們開始嘗試讓排檔桿做動，但是在設置dummy跟設置IE關節時遇到了很多問題，但時間的關係所以只能省略很多零件以及加緊腳步了，開始製作簡報與PDF，畢竟下禮拜要報告了。</span></p>
 <p><span style="background-color: #ccffff;">Week9</span></p>
-<p></p>
+<p><span>這週是我們的報告週，也是這學期的期中考週，雖然我們在coppeliasim裡面沒有成功的讓機構相互作動起來，雖然知道該往哪個方向去改進，但因為時間不足所以只能先製作報告了，希望下次專題能更快完成自己分工的任務。</span></p>
 <p><span style="background-color: #ccffff;">Week10</span></p>
 <p></p><br />Week10~18 << <a href='Week10~18.html'>Previous</a> </div>
         
