--- a/content/Week9.html
+++ b/content/Week9.html
@@ -136,7 +136,9 @@ img.add_border {
     <div id="tipue_search_content">Week8 << <a href='Week8.html'>Previous</a> <a href='Week10~18.html'>Next</a> >> Week10~18<br /><h1>Week9</h1>
 <p><span style="background-color: #ffff00;">報告週</span></p>
 <p><span style="background-color: #ffffff;">Youtube : </span></p>
+<p><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Bm76KBEi2ZA" width="560"></iframe></span></p>
 <p><span style="background-color: #ffffff;">PDF : </span></p>
+<p><a href="./../downloads/2021-協同產品設計實習-stage2-ag2.pdf">pdf</a></p>
 <p><span style="background-color: #ffff00;"></span></p>
 <br />Week8 << <a href='Week8.html'>Previous</a> <a href='Week10~18.html'>Next</a> >> Week10~18</div>
         
