--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -179,6 +179,7 @@ end</pre>
 <p><span style="background-color: #ffffff;">Youtube : </span></p>
 <p><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Bm76KBEi2ZA" width="560"></iframe></span></p>
 <p><span style="background-color: #ffffff;">PDF : </span></p>
+<p><a href="/downloads/2021-協同產品設計實習-stage2-ag2.pdf">pdf</a></p>
 <p><span style="background-color: #ffff00;"></span></p>
 <h2><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week10~18</span></span></h2>
 <h1><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Experience</span></span></h1>
