--- a/content/Week10.html
+++ b/content/Week10.html
@@ -133,8 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week9 << <a href='Week9.html'>Previous</a> <a href='Week10.html'>Next</a> >> Week10<br /><h1>Week10~18</h1>
-<br />Week9 << <a href='Week9.html'>Previous</a> <a href='Week10.html'>Next</a> >> Week10</div>
+    <div id="tipue_search_content">Week10~18 << <a href='Week10~18.html'>Previous</a> <a href='Experience.html'>Next</a> >> Experience<br /><h1>Week10</h1>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"></span></span></p>
+<br />Week10~18 << <a href='Week10~18.html'>Previous</a> <a href='Experience.html'>Next</a> >> Experience</div>
         
     <!-- footer -->
       <div class="container">
