--- a/content/Week12.html
+++ b/content/Week12.html
@@ -133,14 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week5 << <a href='Week5.html'>Previous</a> <a href='Week7.html'>Next</a> >> Week7<br /><h1>Week6</h1>
-<p><span style="background-color: #ffff00;">繪製零件與組合圖</span></p>
-<p><img alt="" height="407" src="./../images/螢幕擷取畫面 (2).png" width="476"/></p>
-<p></p>
-<p><span style="background-color: #ffffff;"></span></p>
-<p><span style="background-color: #ffff00;">Solvespace</span></p>
-<p><span style="background-color: #ccffff;"></span></p>
-<br />Week5 << <a href='Week5.html'>Previous</a> <a href='Week7.html'>Next</a> >> Week7</div>
+    <div id="tipue_search_content">Week11 << <a href='Week11.html'>Previous</a> <a href='Experience.html'>Next</a> >> Experience<br /><h1>Week12</h1>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"></span></span></p>
+<br />Week11 << <a href='Week11.html'>Previous</a> <a href='Experience.html'>Next</a> >> Experience</div>
         
     <!-- footer -->
       <div class="container">
