--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -183,6 +183,16 @@ end</pre>
 <p><span style="background-color: #ffff00;"></span></p>
 <h2><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week10~18</span></span></h2>
 <h3><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week10</span></span></h3>
+<h3><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week11</span></span></h3>
+<h3><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week12</span></span></h3>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Task1 : </span></span></p>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span>讀取</span><span> </span><a href="https://drive.google.com/file/d/1HETcW6z9bweibVH37jiziNbT71E8dgVU/view?usp=sharing">stage3_2a.txt</a><span>, 建立 Stage3 的分組倉儲, 分組網頁, 以及各組員倉儲及網頁連結.</span></span></span></p>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/EwU3ukQ6C_s" width="560"></iframe></span></span></p>
+<h3><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week13</span></span></h3>
+<h3><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span>Week14</span></span></span></h3>
+<h3><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span>Week15</span></span></span></h3>
+<h3><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span>Week16</span></span></span></h3>
+<h3><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span>Week17</span></span></span></h3>
 <p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"></span></span></p>
 <h1><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Experience</span></span></h1>
 <p><span style="background-color: #ccffff;">Week1</span></p>
