--- a/config/content.htm
+++ b/config/content.htm
@@ -184,8 +184,14 @@ end</pre>
 <h2><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week10~18</span></span></h2>
 <h3><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week10</span></span></h3>
 <h3><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week11</span></span></h3>
+<p><span style="background-color: #ffff00;">開始分組專題製作</span></p>
+<p><span style="background-color: #ffffff;">先瞭解各個組員是否會使用SSH等一些基本的東西，並且建立好分組網站及確認組員都熟悉協同方式。</span></p>
+<p><span style="background-color: #ffffff;"></span></p>
+<p><span style="background-color: #ffff00;">w11直播</span></p>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span>stage3-ag2-40623121</span><br/><span>主題 : 討論要做的項目及選定</span></span></span></p>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Wn2x2GW2m_I" width="560"></iframe></span></span></p>
 <h3><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week12</span></span></h3>
-<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Task1 : </span></span></p>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span style="background-color: #ffff00;">Task1</span> : </span></span></p>
 <p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span>讀取</span><span> </span><a href="https://drive.google.com/file/d/1HETcW6z9bweibVH37jiziNbT71E8dgVU/view?usp=sharing">stage3_2a.txt</a><span>, 建立 Stage3 的分組倉儲, 分組網頁, 以及各組員倉儲及網頁連結.</span></span></span></p>
 <p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span>程式碼 : </span></span></span></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">with open("stage3_2a.txt") as fh:
@@ -216,13 +222,22 @@ for i in range(6):
 <p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">操作影片 : </span></span></p>
 <p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/EwU3ukQ6C_s" width="560"></iframe></span></span></p>
 <p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"></span></span></p>
-<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Task2 : </span></span></p>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span style="background-color: #ffff00;">Task2</span> : </span></span></p>
+<p>下載 <a href="https://www.coppeliarobotics.com/downloads">CoppeliaSim 4.2.0 載點</a></p>
+<p>下載控制程式碼 remote API 來控制場景</p>
+<p><span> </span><a href="http://mde.tw/cad2020/downloads/coppeliasim/vrep_remoteapi_ex.7z">http://mde.tw/cad2020/downloads/coppeliasim/vrep_remoteapi_ex.7z</a></p>
+<p>把程式碼放進SciTE後GO</p>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/2O-XS8sAAR8" width="560"></iframe></span></span></p>
 <p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"></span></span></p>
-<span style="background-color: #ffff00;"><span style="background-color: #ffffff;"></span></span>
 <p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"></span></span></p>
 <h3><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week13</span></span></h3>
+<p><span style="background-color: #ffff00;">帳號被Flagged</span></p>
+<p><span style="background-color: #ffffff;">因為帳號名稱都是連號，所以被github誤判定為假帳號。</span></p>
+<p><span style="background-color: #ffffff;"></span></p>
 <h3><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span>Week14</span></span></span></h3>
 <h3><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span>Week15</span></span></span></h3>
+<p><span style="background-color: #ffff00;">Fossil</span></p>
+<p><span style="background-color: #ffff00;"></span></p>
 <h3><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span>Week16</span></span></span></h3>
 <h3><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span>Week17</span></span></span></h3>
 <p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"></span></span></p>
@@ -251,8 +266,18 @@ for i in range(6):
 <p><span style="background-color: #ccffff;">Week9</span></p>
 <p><span>這週是我們的報告週，也是這學期的期中考週，雖然我們在coppeliasim裡面沒有成功的讓機構相互作動起來，雖然知道該往哪個方向去改進，但因為時間不足所以只能先製作報告了，希望下次專題能更快完成自己分工的任務。</span></p>
 <p><span style="background-color: #ccffff;">Week10</span></p>
+<p><span style="background-color: #ffffff;">這週我們開始了第三次的分組專題，這次的人數直接跳到了八個人一組，想必在統整想法及協同網站時會遇到更多的困難，不過相信會一步一步的解決的。</span></p>
 <p><span style="background-color: #ccffff;"><span>Week11</span></span></p>
+<p><span style="background-color: #ffffff;">這週開始制定主題，然後<span>先瞭解各個組員是否會使用SSH等一些基本的東西，並且建立好分組網站及確認組員都熟悉協同方式。</span></span></p>
 <p><span style="background-color: #ccffff;"><span>Week12</span></span></p>
+<p><span style="background-color: #ccffff;"><span></span></span></p>
 <p><span style="background-color: #ccffff;"><span>Week13</span></span></p>
+<p><span style="background-color: #ccffff;"><span></span></span></p>
 <p><span style="background-color: #ccffff;"><span>Week14</span></span></p>
+<p><span style="background-color: #ccffff;"><span></span></span></p>
+<p><span style="background-color: #ccffff;"><span>Week15</span></span></p>
+<p><span style="background-color: #ccffff;"><span></span></span></p>
+<p><span style="background-color: #ccffff;"><span>Week16</span></span></p>
+<p><span style="background-color: #ccffff;"><span>Week17</span></span></p>
+<p><span style="background-color: #ccffff;"><span>Week18</span></span></p>
 <p></p>
