--- a/content/Experience.html
+++ b/content/Experience.html
@@ -133,14 +133,46 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week10 << <a href='Week10.html'>Previous</a> <a href='Week12.html'>Next</a> >> Week12<br /><h1>Week11</h1>
-<p><span style="background-color: #ffff00;">開始分組專題製作</span></p>
-<p><span style="background-color: #ffffff;">先瞭解各個組員是否會使用SSH等一些基本的東西，並且建立好分組網站及確認組員都熟悉協同方式。</span></p>
+    <div id="tipue_search_content">Week17 << <a href='Week17.html'>Previous</a> <br /><h1>Experience</h1>
+<p><span style="background-color: #ccffff;">Week1</span></p>
+<p><span style="background-color: #ffffff;">開始了協同產品設計的第一週，說起來也慚愧，畢竟是之前太混什麼都沒學到才被當的，這學期會認真學習的。</span></p>
+<p><span style="background-color: #ffffff;">一開始一如往常地建立個人倉儲，這次不一樣的事是直接使用現成的子模組，比起以前方扁許多，然後薛席從英文單字了解其中的意義，像collaborative,product,design等等，最後就是編輯自己的leo editer，雖然有點落後進度不過會努力跟上的。</span></p>
 <p><span style="background-color: #ffffff;"></span></p>
-<p><span style="background-color: #ffff00;">w11直播</span></p>
-<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span>stage3-ag2-40623121</span><br/><span>主題 : 討論要做的項目及選定</span></span></span></p>
-<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Wn2x2GW2m_I" width="560"></iframe></span></span></p>
-<br />Week10 << <a href='Week10.html'>Previous</a> <a href='Week12.html'>Next</a> >> Week12</div>
+<p><span style="background-color: #ccffff;">Week2</span></p>
+<p><span style="background-color: #ffffff;">跟以前不一樣的是，這次分組不再是使用亂數分組，而是使用Ethercalc的協同同步方式，我覺得是很有效率的方法，不過也出現了些小問題。</span></p>
+<p><span style="background-color: #ffffff;">然後就是開始著手製作第一次的專題題目，但本身對coppeliasim不熟，所以還需要些時間摸索。</span></p>
+<p><span style="background-color: #ccffff;"></span></p>
+<p><span style="background-color: #ccffff;">Week3</span></p>
+<p><span style="background-color: #ffffff;">這週都在繪製零件跟操作coppeliasim，還有建立ssh對自己的github連線，我覺得要理解ssh蠻難的，不過還是有順利連線，上課中還有遇到個問題就是，分組網站不是建立在組長下面，所以就學習了如何使用git remote add並推送至各自的倉儲下，回家後就繼續測試並且製作下週報告要用的html與pdf。</span></p>
+<p><span style="background-color: #ccffff;"></span></p>
+<p><span style="background-color: #ccffff;">Week4</span></p>
+<p><span style="background-color: #ffffff;">如果只是單純的直線路徑並不是一個好的作品，要加入考量迴轉半徑、離心力、輪子收縮、物體加入質量、需要多大馬力起飛、加入感測器等等各種參數，當初選定題目時沒有考量那麼多，還有要有設計流程圖，很多問題都是當初沒有想到的，幸虧有老師的點醒。</span></p>
+<p><span style="background-color: #ccffff;">Week5</span></p>
+<p><span style="background-color: #ffffff;">這週開始了第二次的分組專案，我這次就不是跟第一次分組的組員了，經過了討論許久後，我們雙方都不延續之前的主題，一個因為沒什麼發展空間，一個因為要延續的話太難，所以決定做變速箱，國內沒什麼資料或設計參考圖，所以我們也找了很多國外的資料。</span></p>
+<p><span style="background-color: #ccffff;">Week6</span></p>
+<p><span style="background-color: #ffffff;">這週我開始畫幾個構想的機構圖，然後參照國外網站找到的變速箱原型下去繪製零件與組合，在模數與齒比和零件尺寸的設計上花了很多時間，在網站的協同上也因為比第一次分組時多了兩個人，所以也面臨了許多新的協同問題，還好組員們很給力也一一的解決問題了。</span></p>
+<p><span style="background-color: #ccffff;">Week7</span></p>
+<p><span style="background-color: #ffffff;">這週成功讓機構在coppeliasim作動了，一開始丟進去發現拆解後有上百個零組件時我們就先抑制掉大部分零件後先是試著讓其作動，但也發生了問題，我們也只能嘗試著各種排列組合去排列從屬關係，最後有成工作動了，但某些零件做動不太合理。</span></p>
+<p><span style="background-color: #ccffff;">Week8</span></p>
+<p><span>這週我們開始嘗試讓排檔桿做動，但是在設置dummy跟設置IE關節時遇到了很多問題，但時間的關係所以只能省略很多零件以及加緊腳步了，開始製作簡報與PDF，畢竟下禮拜要報告了。</span></p>
+<p><span style="background-color: #ccffff;">Week9</span></p>
+<p><span>這週是我們的報告週，也是這學期的期中考週，雖然我們在coppeliasim裡面沒有成功的讓機構相互作動起來，雖然知道該往哪個方向去改進，但因為時間不足所以只能先製作報告了，希望下次專題能更快完成自己分工的任務。</span></p>
+<p><span style="background-color: #ccffff;">Week10</span></p>
+<p><span style="background-color: #ffffff;">這週我們開始了第三次的分組專題，這次的人數直接跳到了八個人一組，想必在統整想法及協同網站時會遇到更多的困難，不過相信會一步一步的解決的。</span></p>
+<p><span style="background-color: #ccffff;"><span>Week11</span></span></p>
+<p><span style="background-color: #ffffff;">這週開始制定主題，然後<span>先瞭解各個組員是否會使用SSH等一些基本的東西，並且建立好分組網站及確認組員都熟悉協同方式。</span></span></p>
+<p><span style="background-color: #ccffff;"><span>Week12</span></span></p>
+<p><span style="background-color: #ccffff;"><span></span></span></p>
+<p><span style="background-color: #ccffff;"><span>Week13</span></span></p>
+<p><span style="background-color: #ccffff;"><span></span></span></p>
+<p><span style="background-color: #ccffff;"><span>Week14</span></span></p>
+<p><span style="background-color: #ccffff;"><span></span></span></p>
+<p><span style="background-color: #ccffff;"><span>Week15</span></span></p>
+<p><span style="background-color: #ccffff;"><span></span></span></p>
+<p><span style="background-color: #ccffff;"><span>Week16</span></span></p>
+<p><span style="background-color: #ccffff;"><span>Week17</span></span></p>
+<p><span style="background-color: #ccffff;"><span>Week18</span></span></p>
+<p></p><br />Week17 << <a href='Week17.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
