--- a/content/Week12.html
+++ b/content/Week12.html
@@ -133,14 +133,47 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week10 << <a href='Week10.html'>Previous</a> <a href='Week12.html'>Next</a> >> Week12<br /><h1>Week11</h1>
-<p><span style="background-color: #ffff00;">開始分組專題製作</span></p>
-<p><span style="background-color: #ffffff;">先瞭解各個組員是否會使用SSH等一些基本的東西，並且建立好分組網站及確認組員都熟悉協同方式。</span></p>
-<p><span style="background-color: #ffffff;"></span></p>
-<p><span style="background-color: #ffff00;">w11直播</span></p>
-<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span>stage3-ag2-40623121</span><br/><span>主題 : 討論要做的項目及選定</span></span></span></p>
-<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Wn2x2GW2m_I" width="560"></iframe></span></span></p>
-<br />Week10 << <a href='Week10.html'>Previous</a> <a href='Week12.html'>Next</a> >> Week12</div>
+    <div id="tipue_search_content">Week11 << <a href='Week11.html'>Previous</a> <a href='Week13.html'>Next</a> >> Week13<br /><h1>Week12</h1>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span style="background-color: #ffff00;">Task1</span> : </span></span></p>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span>讀取</span><span> </span><a href="https://drive.google.com/file/d/1HETcW6z9bweibVH37jiziNbT71E8dgVU/view?usp=sharing">stage3_2a.txt</a><span>, 建立 Stage3 的分組倉儲, 分組網頁, 以及各組員倉儲及網頁連結.</span></span></span></p>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span>程式碼 : </span></span></span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">with open("stage3_2a.txt") as fh:
+   #先將我們存起來stage3_2a.txt打開並命名為fh
+    data = fh.readlines()
+    #將stage3_2a.txt的資料以串列形式存為data
+for i in range(6):
+    #將次數限定就不會告知list index out of range了
+    newdata1 = data[i].replace('4823122','40823122')
+    #因為40823122的學號打錯了,所以用 replace 把舊的替換成新的
+    newdata2 = newdata1.replace('\t\t','')
+    #因為有一組只有6人,所以用 replace 把空位刪除
+    newdata3 = newdata2.replace('_','-')
+    #因為在編輯txt的時候-會變成_,所以用 replace 把_修正為-
+    group = newdata3.rstrip("\n").split("\t")
+    #先取出newdata list中的第i項,消除元素中/n,再以\t取出需要的文字
+    print('&lt;p&gt;&lt;a href="https://github.com/'+group[1]+'/'+group[0]+'"&gt;'+group[0]+' repo&lt;/a&gt; | &lt;a href="https://'+group[2]+'.github.io/'+group[0]+'"&gt;'+group[0]+' site&lt;/a&gt;&lt;/p&gt;')
+    for j in range(1,18,2):
+    #設一個範圍,(1到18,每次+2,1&lt;=j&lt;18)
+        try:
+            n = group[j].replace('40823112','a40823112')
+            #因為40823112的github帳號是a40823112,所以用 replace 把帳號修正
+            print('&lt;p&gt;'+'&lt;a href="https://github.com/'+n+'/cd2021"&gt;'+group[j]+' repo&lt;/a&gt; | &lt;a href="https://'+n+'.github.io/cd2021"&gt;'+group[j]+' site&lt;/a&gt;&lt;/p&gt;')
+        except:
+           continue
+        #這邊使用try.....except,因為有一組6個人,導致有空格,所以需要用continue讓迴圈繼續跑</pre>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"></span></span></p>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">操作影片 : </span></span></p>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/EwU3ukQ6C_s" width="560"></iframe></span></span></p>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"></span></span></p>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span style="background-color: #ffff00;">Task2</span> : </span></span></p>
+<p>下載 <a href="https://www.coppeliarobotics.com/downloads">CoppeliaSim 4.2.0 載點</a></p>
+<p>下載控制程式碼 remote API 來控制場景</p>
+<p><span> </span><a href="http://mde.tw/cad2020/downloads/coppeliasim/vrep_remoteapi_ex.7z">http://mde.tw/cad2020/downloads/coppeliasim/vrep_remoteapi_ex.7z</a></p>
+<p>把程式碼放進SciTE後GO</p>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/2O-XS8sAAR8" width="560"></iframe></span></span></p>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"></span></span></p>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"></span></span></p>
+<br />Week11 << <a href='Week11.html'>Previous</a> <a href='Week13.html'>Next</a> >> Week13</div>
         
     <!-- footer -->
       <div class="container">
