--- a/content/Week17.html
+++ b/content/Week17.html
@@ -133,14 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week10 << <a href='Week10.html'>Previous</a> <a href='Week12.html'>Next</a> >> Week12<br /><h1>Week11</h1>
-<p><span style="background-color: #ffff00;">開始分組專題製作</span></p>
-<p><span style="background-color: #ffffff;">先瞭解各個組員是否會使用SSH等一些基本的東西，並且建立好分組網站及確認組員都熟悉協同方式。</span></p>
-<p><span style="background-color: #ffffff;"></span></p>
-<p><span style="background-color: #ffff00;">w11直播</span></p>
-<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><span>stage3-ag2-40623121</span><br/><span>主題 : 討論要做的項目及選定</span></span></span></p>
-<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Wn2x2GW2m_I" width="560"></iframe></span></span></p>
-<br />Week10 << <a href='Week10.html'>Previous</a> <a href='Week12.html'>Next</a> >> Week12</div>
+    <div id="tipue_search_content">Week16 << <a href='Week16.html'>Previous</a> <a href='Experience.html'>Next</a> >> Experience<br /><h1>Week17</h1>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"></span></span></p>
+<br />Week16 << <a href='Week16.html'>Previous</a> <a href='Experience.html'>Next</a> >> Experience</div>
         
     <!-- footer -->
       <div class="container">
