--- a/content/Week17.html
+++ b/content/Week17.html
@@ -134,7 +134,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Week16 << <a href='Week16.html'>Previous</a> <a href='Experience.html'>Next</a> >> Experience<br /><h1>Week17</h1>
-<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;"></span></span></p>
+<h4>Week18</h4>
 <br />Week16 << <a href='Week16.html'>Previous</a> <a href='Experience.html'>Next</a> >> Experience</div>
         
     <!-- footer -->
