--- a/content/Experience.html
+++ b/content/Experience.html
@@ -162,11 +162,11 @@ img.add_border {
 <p><span style="background-color: #ccffff;"><span>Week11</span></span></p>
 <p><span style="background-color: #ffffff;">這週開始制定主題，然後<span>先瞭解各個組員是否會使用SSH等一些基本的東西，並且建立好分組網站及確認組員都熟悉協同方式。</span></span></p>
 <p><span style="background-color: #ccffff;"><span>Week12</span></span></p>
-<p><span style="background-color: #ccffff;"><span></span></span></p>
+<p><span style="background-color: #ffffff;">最後選定題目為停車塔，並且不延續各自組別stage-ag1,stage-ag2的題目，要馬是不好發揮或是沒有什麼特色，等組長制定好完成日期後就要開始加速動工了，採用的是每人都畫看看最後再投票決定要使用哪個，這樣在後續組裝比較不會有干涉問題，且讓每個人都有各自的發揮空間。</span></p>
 <p><span style="background-color: #ccffff;"><span>Week13</span></span></p>
-<p><span style="background-color: #ccffff;"><span></span></span></p>
+<p>由於疫情逐漸加重的關係，開始採用google meeting的方式線上直播教學，這週我們先是開一個新的會議各自討論，並且讓組員們各自show自己所繪製的組合圖/零件，這個方式比起在教室大家跑來跑去各自的電腦看還要有效率，並且也能讓每個組員都能確實參與到開會內。。</p>
 <p><span style="background-color: #ccffff;"><span>Week14</span></span></p>
-<p><span style="background-color: #ccffff;"><span></span></span></p>
+<p> </p>
 <p><span style="background-color: #ccffff;"><span>Week15</span></span></p>
 <p><span style="background-color: #ccffff;"><span></span></span></p>
 <p><span style="background-color: #ccffff;"><span>Week16</span></span></p>
