--- a/content/Week10.html
+++ b/content/Week10.html
@@ -136,6 +136,10 @@ img.add_border {
     <div id="tipue_search_content">Week10~18 << <a href='Week10~18.html'>Previous</a> <a href='Week11.html'>Next</a> >> Week11<br /><h1>Week10</h1>
 <p><span style="background-color: #ffff00;">開始分組專題製作</span></p>
 <p><span>先瞭解各個組員是否會使用SSH等一些基本的東西，並且建立好分組網站及確認組員都熟悉協同方式。</span></p>
+<p><span style="background-color: #ffffff;">標題 : 2021-協同產品實習-<span>stage3-ag2</span></span></p>
+<p><span style="background-color: #ffffff;"><br/><span>專題題目 : <span>機械停車塔 Mechanical parking tower</span></span></span></p>
+<p><span style="background-color: #ffffff;"><br/><span>設計理念 : 於世界人口逐漸增多且寸土寸金，在都市區域租車位都需要碰運氣，有錢也不一定能租到，所以我們就想設計一個可以將大量的車輛容納於一個樓層，不僅可以減少使用地還可以集中管理車輛；因為是自動化的，也能減少人力的消耗。</span></span></p>
+<p><span style="background-color: #ffffff;"><span>網站 :<span> </span><a href="https://40623121.github.io/stage3-ag2/content/index.html">分組網站</a></span></span></p>
 <br />Week10~18 << <a href='Week10~18.html'>Previous</a> <a href='Week11.html'>Next</a> >> Week11</div>
         
     <!-- footer -->
