--- a/content/Week14.html
+++ b/content/Week14.html
@@ -134,7 +134,16 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Week13 << <a href='Week13.html'>Previous</a> <a href='Week15.html'>Next</a> >> Week15<br /><h1>Week14</h1>
-<br />Week13 << <a href='Week13.html'>Previous</a> <a href='Week15.html'>Next</a> >> Week15</div>
+<p></p>
+<p><span style="background-color: #ffff00;">零件繪製</span></p>
+<p><span style="background-color: #ffffff;">經過商討零件尺寸及各個零件的結合後畫出下圖的停車塔，作動原理是由圖中黃色部分的馬達運轉並由皮帶帶動下方的主軸，並且主軸帶動鍊條讓車位能夠順時針、逆時針轉動，達到有效最大化的利用空間區域停放車輛。</span></p>
+<p><a href="https://drive.google.com/file/d/1l_XG4v_6XjI4Gex0JNePvG_y1ot2ffNF/view">檔案連結</a></p>
+<p><span style="background-color: #ffffff;"><img alt="" height="321" src="./../images/朝旭設計圖.png" width="489"/></span></p>
+<p>講解影片 : </p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/C_wH2D1PMG0" width="560"></iframe></p>
+<p><span style="background-color: #ffffff;"></span></p>
+<p><span style="background-color: #ffffff;"></span></p>
+<p><span style="background-color: #ffffff;"></span></p><br />Week13 << <a href='Week13.html'>Previous</a> <a href='Week15.html'>Next</a> >> Week15</div>
         
     <!-- footer -->
       <div class="container">
